Advanced numpy (fixed vector)

--- a/advanced_numpy.ipynb
+++ b/advanced_numpy.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "id": "8235e0ea",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "id": "9fd37ffc",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "75391f7c",
    "metadata": {},
    "outputs": [
@@ -130,12 +130,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.22156569 0.31979874 0.93209828 0.20009645 0.9710366  0.91957347\n",
-      " 0.4694557  0.93476259 0.37515013 0.44126398]\n",
+      "[0.5672697  0.76733469 0.46338782 0.3028645  0.58490495 0.62829314\n",
+      " 0.28310148 0.59839204 0.67205316 0.36798716]\n",
       "\n",
-      "[False False  True False  True  True False  True False False]\n",
+      "[ True  True False False  True  True False  True  True False]\n",
       "\n",
-      "[0 0 1 0 1 1 0 1 0 0]\n"
+      "[1 1 0 0 1 1 0 1 1 0]\n"
      ]
     }
    ],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "id": "b4aa7e4c",
    "metadata": {},
    "outputs": [
@@ -176,29 +176,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[75 39 80 63 39]\n",
-      " [89 20 88 68 92]\n",
-      " [45 70  9 92 40]\n",
-      " [49 64 33  0 14]]\n",
+      "[[95 44  2 16 60]\n",
+      " [28 28 14 10 14]\n",
+      " [54 93 35 89 25]\n",
+      " [53 57 38 25 71]]\n",
       "\n",
       "找出每一列的最大值\n",
-      "第1列的最大值：80\n",
-      "第2列的最大值：92\n",
-      "第3列的最大值：92\n",
-      "第4列的最大值：64\n",
+      "第1列的最大值：95\n",
+      "第2列的最大值：28\n",
+      "第3列的最大值：93\n",
+      "第4列的最大值：71\n",
       "\n",
-      "[75 39 80 63 39 89 20 88 68 92 45 70  9 92 40 49 64 33  0 14]\n",
+      "[95 44  2 16 60 28 28 14 10 14 54 93 35 89 25 53 57 38 25 71]\n",
       "第一次轉換形狀：(20,)\n",
       "\n",
-      "[[75 39 80 63]\n",
-      " [39 89 20 88]\n",
-      " [68 92 45 70]\n",
-      " [ 9 92 40 49]\n",
-      " [64 33  0 14]]\n",
+      "[[95 44  2 16]\n",
+      " [60 28 28 14]\n",
+      " [10 14 54 93]\n",
+      " [35 89 25 53]\n",
+      " [57 38 25 71]]\n",
       "第二次轉換形狀：(5, 4)\n",
       "\n",
-      "[[75 39 80 63 39 89 20 88 68 92]\n",
-      " [45 70  9 92 40 49 64 33  0 14]]\n",
+      "[[95 44  2 16 60 28 28 14 10 14]\n",
+      " [54 93 35 89 25 53 57 38 25 71]]\n",
       "第三次轉換形狀：(2, 10)\n"
      ]
     }
@@ -234,6 +234,65 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7e56f878",
+   "metadata": {},
+   "source": [
+    "### 應用：模擬基因資料"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "aab1cd10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.59003522 0.16530461 0.84135499 0.98478163 0.93419723 0.37898249\n",
+      " 0.45047991 0.82883862 0.22175936 0.78088689 0.78821161 0.97200457\n",
+      " 0.36388144 0.58815738 0.58610491 0.62695171 0.3760732  0.48323549\n",
+      " 0.5877107  0.56152663 0.12216467 0.04300691 0.56010189 0.17231641\n",
+      " 0.853698   0.02378113 0.13198753 0.87926666 0.8291946  0.01863869\n",
+      " 0.70379205 0.46843055 0.56647677 0.87675004 0.68109403 0.48363941\n",
+      " 0.77307031 0.72288486 0.66993933 0.50755514 0.48704623 0.16702818\n",
+      " 0.1363372  0.24766592 0.54210375 0.48642137 0.299787   0.53534534\n",
+      " 0.2032776  0.85807839 0.27915473 0.29534938 0.21450584 0.3184781\n",
+      " 0.16642494 0.91518112 0.84497624 0.88158262 0.45019092 0.00352695\n",
+      " 0.19755686 0.37889954 0.10904678 0.95470236 0.11849645 0.09983377\n",
+      " 0.6849913  0.60084803 0.59149845 0.76581871 0.63445527 0.10380605\n",
+      " 0.18124584 0.42498518 0.38910458 0.33570512 0.57197529 0.7300346\n",
+      " 0.75290243 0.6118628  0.54808168 0.63913522 0.87251115 0.80308468\n",
+      " 0.52161633 0.21745469 0.95969348 0.73542833 0.08721218 0.38726475\n",
+      " 0.41364612 0.70008771 0.27164525 0.02190474 0.29827403 0.51000925\n",
+      " 0.52472161 0.95868689 0.45894514 0.85885746]\n",
+      "['Mid' 'Low' 'High' 'High' 'High' 'Mid' 'Mid' 'High' 'Mid' 'Mid' 'Mid'\n",
+      " 'High' 'Mid' 'Mid' 'Mid' 'Mid' 'Mid' 'Mid' 'Mid' 'Mid' 'Low' 'Low' 'Mid'\n",
+      " 'Low' 'High' 'Low' 'Low' 'High' 'High' 'Low' 'Mid' 'Mid' 'Mid' 'High'\n",
+      " 'Mid' 'Mid' 'Mid' 'Mid' 'Mid' 'Mid' 'Mid' 'Low' 'Low' 'Mid' 'Mid' 'Mid'\n",
+      " 'Mid' 'Mid' 'Mid' 'High' 'Mid' 'Mid' 'Mid' 'Mid' 'Low' 'High' 'High'\n",
+      " 'High' 'Mid' 'Low' 'Low' 'Mid' 'Low' 'High' 'Low' 'Low' 'Mid' 'Mid' 'Mid'\n",
+      " 'Mid' 'Mid' 'Low' 'Low' 'Mid' 'Mid' 'Mid' 'Mid' 'Mid' 'Mid' 'Mid' 'Mid'\n",
+      " 'Mid' 'High' 'High' 'Mid' 'Mid' 'High' 'Mid' 'Low' 'Mid' 'Mid' 'Mid'\n",
+      " 'Mid' 'Low' 'Mid' 'Mid' 'Mid' 'High' 'Mid' 'High']\n",
+      "(100,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "expr = np.random.rand(100)\n",
+    "\n",
+    "labels = np.where(expr > 0.8, \"High\", np.where(expr < 0.2, \"Low\", \"Mid\"))\n",
+    "\n",
+    "print(expr)\n",
+    "print(labels)\n",
+    "print(np.shape(labels))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a72f9030",
    "metadata": {},
    "source": [
@@ -242,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "id": "8eb1e798",
    "metadata": {},
    "outputs": [
@@ -250,10 +309,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50005000.0\n",
-      "50005000\n",
-      "向量運算秒數：0.0368\n",
-      "迴圈運算秒數：0.00299\n"
+      "50000005000000.0\n",
+      "50000005000000\n",
+      "向量運算秒數：0.48712\n",
+      "迴圈運算秒數：1.77775\n"
      ]
     }
    ],
@@ -262,12 +321,12 @@
     "import time\n",
     "\n",
     "start = time.time()\n",
-    "a = np.ones(10000)\n",
-    "b = np.arange(1, 10001)\n",
+    "a = np.ones(10000000)\n",
+    "b = np.arange(1, 10000001)\n",
     "print(a.dot(b))\n",
     "end_1 = time.time()\n",
     "total = 0\n",
-    "for i in range(1, 10001):\n",
+    "for i in range(1, 10000001):\n",
     "    total += i\n",
     "print(total)\n",
     "end_2 = time.time()\n",
